sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: illegal start of simple pattern
var int i=0;
         ^AlgBubbleSort1:3: error: '=' expected but ';' found.
var int i=0;
           ^AlgBubbleSort1:4: error: illegal start of simple pattern
var boolean faitechange=false;
                       ^AlgBubbleSort1:4: error: '=' expected but ';' found.
var boolean faitechange=false;
                             ^AlgBubbleSort1:5: error: ')' expected but ',' found.
while( i>0, i< getNombreValeurs()-1)
          ^AlgBubbleSort1:5: error: ';' expected but ')' found.
while( i>0, i< getNombreValeurs()-1)
                                   ^