sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var int i=0;
var boolean faitechange=false;
while( i>0, i< getNombreValeurs()-1)
do
   if  plusPetitQue(getVAleur(i:Int):int, getValeur(i+1:Int))== false
    {echange(i:Int, i+1:Int);faitechange=true;}
    else
   { i=i+1}; 
}
